# carlton

./: .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yaml
carlton/: config_ingest.py  helper.py  run.py  run_notebook.py  run_quality.py  save.py  setup_table_config.py  table.py
carlton/ddl/: create.py
carlton/ingest/: config_ingest.py  config_ingestor.py  config_validator.py  data_reader.py  data_saver.py  path_builder.py  setup_table_config.py  table.py
carlton/mock/: eh_send_message.py  generate.py
carlton/utils/: helper.py  logger.py  spark_session_manager.py  table_manager.py  validator.py
docs/: 01_test.md  01_tutorial.md  02_comecando.md  03_projeto.md  04_programa.md  index.md
docs/api/: config_ingestor.md  data_reader.md  data_saver.md  path_builder.md  table.md  validator.md
tests/: test_config_ingestor.py  test_config_validator.py  test_create.py  test_data_reader.py  test_data_saver.py  test_generate.py  test_logger.py  test_path_builder.py  test_run.py  test_spark_session_manager.py  test_table.py  test_validator.py
