[tool.poetry]
name = "carlton"
version = "0.1.3"
description = "Carlton, uma poderosa biblioteca de ingestão de dados na cloud"
license = "Apache License"
authors = ["Leal <douglas.sleal@outlook.com>"]
readme = "README.md"
packages = [{include = "carlton"}]
classifiers = [
    "Topic :: Education",
    "Environment :: Console",
    "Natural Language :: Portuguese (Brazilian)",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
"Documentação" = "https://carlton.readthedocs.io/pt-br/latest/"
"Código" = "https://github.com/lealdouglas/carlton"
"Bug Tracker" = "https://github.com/lealdouglas/carlton/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
carlton = "carlton.run:run"
quality = "carlton.run_quality:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
blue = "^0.9.1"
isort = "^5.13.2"
taskipy = "^1.12.2"
pyspark = "^3.5.1"
delta-spark = "^3.2.0"
pytz = "^2024.1"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.5.23"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.2"
mkdocs-macros-plugin = "^1.0.5"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=jarvis -vv"
post_test = "coverage html"